added and referenced boostrap multiselect files, added mvc endpoint for adding a group

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -25,6 +25,7 @@
     <script src="../../Scripts/link_modifier.js"></script>
     <script src="../../Scripts/jquery.timepicker.js"></script>
     <script src="../../Scripts/admin_error_window.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../Content/bootstrap-multiselect.css" />
     <link rel="stylesheet" href="../../Content/Site.css">
     <link rel="stylesheet" href="../../Content/mobile-range-slider.css" />
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css" />
