--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
     <script src="../../Scripts/visitor_modal.js"></script>
     <script src="../../Scripts/Groups/see_groups.js"></script>
     <script src="../../Scripts/Groups/add_group.js"></script>
+    <script src="../../Scripts/Groups/see_group_members.js"></script>
     <script src="../../Scripts/mobile-range-slider.js"></script>
     <script src="../../Scripts/datetime_selection.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
@@ -388,12 +389,11 @@
                                 <label for="add_group_name_field">Name</label>
                                 <input type="text" id="add_group_name_field" class="form-control" name="name" required />
                                 <br />
-                                <label for="members_of_group">Members</label>
-                                <select id="members_of_group" multiple="multiple">
+                                <label for="members_of_group">Members:</label>
+                                <select id="members_of_group" multiple="multiple" name="members[]">
                                     <!-- Select options go here. -->
                                 </select>
                                 <br /><br />
-                                <input type="checkbox" />
                                 <button id="add-group-submit" type="submit" class="btn btn-info btn-block"><span class="glyphicon glyphicon-floppy-disk"></span> Save Group</button>
                             </form>
                         </div>
@@ -408,6 +408,33 @@
         </div>
     </div>
     <!-- /row -->
+    <!------------------------------------------------------------------------>
+    <!--See Group Members Modal-->
+    <div class="row">
+        <div class="container">
+            <!-- See group members modal -->
+            <div class="modal fade" id="see_group_members_modal" role="dialog" data-backdrop="static">
+                <div class="modal-dialog">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div id="main-modal-header" class="modal-header" style="padding:35px 50px;">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="global_modal_header">Group Members</h4>
+                        </div>
+                        <div class="modal-body" style="padding:40px 50px;">
+                            <input type="hidden" id="group_id_for_members"/>
+                        </div>
+                        <!-- Modal Footer -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /see group members modal -->
+        </div>
+    </div>
+    <!--/See Group Members Modal-->
     <!------------------------------------------------------------------------>
     <div class="row">
         <div class="container">
