trying different components for group member list

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -423,6 +423,11 @@
                         </div>
                         <div class="modal-body" style="padding:40px 50px;">
                             <input type="hidden" id="group_id_for_members"/>
+                            <ul class="list-group" id="group_members_list">
+                                <li class="list-group-item">
+                                    <p>Name 1<input type="checkbox" class="pull-right" /></p>
+                                </li>
+                            </ul>
                         </div>
                         <!-- Modal Footer -->
                         <div class="modal-footer">
