--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -419,15 +419,17 @@
                     <div class="modal-content">
                         <div id="main-modal-header" class="modal-header" style="padding:35px 50px;">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="global_modal_header">Group Members</h4>
+                            <h4 class="global_modal_header" id="member_list_heading">Group Members</h4>
                         </div>
                         <div class="modal-body" style="padding:40px 50px;">
                             <input type="hidden" id="group_id_for_members"/>
-                            <ul class="list-group" id="group_members_list">
-                                <li class="list-group-item">
-                                    <p>Name 1<input type="checkbox" class="pull-right" /></p>
-                                </li>
-                            </ul>
+                            <form>
+                                <label for="refine_group_members">Refine Members: </label>
+                                <select id="refine_group_members" multiple="multiple" name="members[]">
+                                    <!-- Select options go here. -->
+                                </select>
+                                <br /><br />
+                            </form>
                         </div>
                         <!-- Modal Footer -->
                         <div class="modal-footer">
