--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -84,7 +84,7 @@
     </div>
     <br />
 
-    @if(ViewBag.Message != null)
+    @if(!string.IsNullOrEmpty(ViewBag.Message))
     {
         <div class="row" id="admin_error_window">
             <div class="container-fluid">
@@ -527,7 +527,7 @@
                                 <form id="edit-group-form" action="/Admin/UpdateGroup" method="post" role="form">
                                     <div class="form-group">
                                         <label for="edit-group-name">Name</label>
-                                        <input id="edit-group-name" type="text" name="name" class="form-control" required />
+                                        <input id="edit-group-name" type="text" name="name" class="form-control" required="required" />
                                         <br />
                                         <label for="edit-group-priority">Group priority: (0 indicates highest priority)</label>
                                         <select id="edit-group-priority" name="priority" class="form-control">
