polish for group related error messages

--- a/ABLCloudStaff/ABLCloudStaff/Content/Site.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/Site.css
@@ -271,3 +271,7 @@ input[type="checkbox"].input-validation-error {
 .vertical_aligned {
     margin-top: 8px;
 }
+
+.padding_top {
+    padding-top: 20px;
+}
