--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -218,7 +218,7 @@
                                                         <tr>
                                                             <th>#</th>
                                                             <th>Group name</th>
-                                                            <th>Group out</th>
+                                                            <th>Group is out</th>
                                                             <th>Priority</th>
                                                             <th>Edit</th>
                                                         </tr>
