--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
 
     @if (ViewBag.Message != null)
     {
-        <div class="row" id="admin_error_window">
+        <div class="row padding_top" id="admin_error_window">
             <div class="container-fluid">
                 <div class="col-md-12">
                     <div class="container well">
