added emergency feature to see which staff are in office

--- a/ABLCloudStaff/ABLCloudStaff/Content/Site.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/Site.css
@@ -122,7 +122,8 @@ input[type="checkbox"].input-validation-error {
 }
 
 #visitor_button,
-#see_groups_button {
+#see_groups_button,
+#emergency_button {
     margin-top: 7px;
 }
 
