--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -84,12 +84,14 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Status Board", "Index", "Home")</li>
                     <li><a href="/Admin/Admin">Administration <span class="glyphicon glyphicon-log-in"></span></a></li>
-                    <li><a href="http://goo.gl/forms/u1cbZStRaA" target="_blank">Submit Feedback <span class="glyphicon glyphicon-list-alt"></span></a></li>
+                    <!--<li><a href="http://goo.gl/forms/u1cbZStRaA" target="_blank">Submit Feedback <span class="glyphicon glyphicon-list-alt"></span></a></li>-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><button class="form-control btn btn-primary" id="visitor_button"><span class="glyphicon glyphicon-plus"></span> Visitor</button></li>
                     <li>&nbsp;</li>
                     <li><button class="form-control btn btn-primary" id="see_groups_button">Groups</button></li>
+                    <li>&nbsp;</li>
+                    <li><button class="form-control btn btn-primary" role="button" id="emergency_button" onclick="window.location.href='/Emergency/Emergency'"><span class="glyphicon glyphicon-fire"></span></button></li>
                 </ul>
             </div>
         </div>
