--- a/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css" />
 
     <!-- favicon from AbacusBio website -->
-    <link rel="apple-touch-icon" sizes="144x144" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-144x144-icon.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-114x114-icon.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-72x72-icon.png" />
-    <link rel="apple-touch-icon" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-57x57-icon.png" />
-    <link rel="shortcut icon" href="http://www.abacusbio.com/themes/abacusbio/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="144x144" href="../../Content/images/icons/apple-touch-144x144-icon.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="../../Content/images/icons/apple-touch-114x114-icon.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="../../Content/images/icons/apple-touch-72x72-icon.png" />
+    <link rel="apple-touch-icon" href="../../Content/images/icons/apple-touch-57x57-icon.png" />
+    <link rel="shortcut icon" href="../../Content/images/icons/favicon.ico" type="image/x-icon" />
 
     <title>CloudStaff Login</title>
 </head>
