--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -36,11 +36,11 @@
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css"/>
 
     <!-- favicon from AbacusBio website -->
-    <link rel="apple-touch-icon" sizes="144x144" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-144x144-icon.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-114x114-icon.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-72x72-icon.png" />
-    <link rel="apple-touch-icon" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-57x57-icon.png" />
-    <link rel="shortcut icon" href="http://www.abacusbio.com/themes/abacusbio/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="144x144" href="../../Content/images/icons/apple-touch-144x144-icon.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="../../Content/images/icons/apple-touch-114x114-icon.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="../../Content/images/icons/apple-touch-72x72-icon.png" />
+    <link rel="apple-touch-icon" href="../../Content/images/icons/apple-touch-57x57-icon.png" />
+    <link rel="shortcut icon" href="../../Content/images/icons/favicon.ico" type="image/x-icon" />
 
     <title>CloudStaff Admin</title>
 
@@ -66,7 +66,7 @@
                 <div id="cloudstaff_title">
                     <a href="/Home/Index" class="navbar-brand" id="redundant_link">
                         <span>
-                            <img id="title_image" src="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-57x57-icon.png" width="25" height="25" />
+                            <img id="title_image" src="../../Content/images/icons/apple-touch-57x57-icon.png" width="25" height="25" />
                         </span>
                         CloudStaff
                     </a>
@@ -77,7 +77,6 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Status Board", "Index", "Home")</li>
                     <li><a href="/Admin/Admin">Administration <span class="glyphicon glyphicon-refresh"></span></a></li>
-                    <li><a href="http://goo.gl/forms/u1cbZStRaA" target="_blank">Submit Feedback <span class="glyphicon glyphicon-list-alt"></span></a></li>
                     <li><a href="/Admin/Logout" class="pull-right">Logout <span class="glyphicon glyphicon-log-out"></span></a></li>
                 </ul>
             </div>
