--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -32,11 +32,11 @@
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css" />
 
     <!-- favicon from AbacusBio website -->
-    <link rel="apple-touch-icon" sizes="144x144" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-144x144-icon.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-114x114-icon.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-72x72-icon.png" />
-    <link rel="apple-touch-icon" href="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-57x57-icon.png" />
-    <link rel="shortcut icon" href="http://www.abacusbio.com/themes/abacusbio/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="144x144" href="../../Content/images/icons/apple-touch-144x144-icon.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="../../Content/images/icons/apple-touch-114x114-icon.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="../../Content/images/icons/apple-touch-72x72-icon.png" />
+    <link rel="apple-touch-icon" href="../../Content/images/icons/apple-touch-57x57-icon.png" />
+    <link rel="shortcut icon" href="../../Content/images/icons/favicon.ico" type="image/x-icon" />
     
     <title>CloudStaff</title>
 
@@ -74,7 +74,7 @@
                 <div id="cloudstaff_title">
                     <a href="/Home/Index" class="navbar-brand" id="redundant_link">
                         <span>
-                            <img id="title_image" src="http://www.abacusbio.com/themes/abacusbio/assets/images/apple-touch-57x57-icon.png" width="25" height="25" />
+                            <img id="title_image" src="../../Content/images/icons/apple-touch-57x57-icon.png" width="25" height="25" />
                         </span>
                         CloudStaff
                     </a>
